[build-system]
requires = ["setuptools>=61.0", "wheel", "torch>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-yaie"
version = "0.1.0"
description = "Educational LLM Inference Engine with Radix Attention and FlashInfer concepts"
authors = [{name = "Ammar", email = "ammar@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.0.0",
    "tokenizers>=0.13.0",
    "huggingface-hub>=0.14.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.21.0",
    "sentencepiece>=0.1.96",
    "accelerate>=0.20.0",
    "peft>=0.4.0",
    "bitsandbytes>=0.39.0",
    "scipy>=1.10.0",
    "pynvml>=11.4.1"
]

[project.scripts]
yaie = "cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "torch>=2.0.0"
]

